--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -66,11 +66,11 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
  
  
 <div id="intro">
-<p><span>Welcome to my site.</span>
+<p><span>Welcome to my site</span>
 <p>My name is Joshua Seims, and I live in San Francisco.
-<p>I'm a serial entrepreneur, and occasional angel investor. I particularly enjoy advising early stage startups.
+<p>I'm a serial entrepreneur, and an occasional angel investor. I particularly enjoy advising early stage startups.
 <p>I love hacking and building cool products.
-<p>Trivia: I was born in Hong Kong, I own a ridiculously  large hot tub, and I know the secret obscene Latin verse in "Ten Thousand Men of Harvard".
+<p>Trivia: I was born in Hong Kong, I own a ridiculously  large hot tub, and I know the secret obscene Latin verse in "Ten Thousand Men of Harvard."
 </div>
 
 <div style="clear:both;"></div>
