--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -52,7 +52,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 </ul>
 </li>
 
-<li><a href="work">Work</a></li>
+<li><a href="services">Services</a></li>
 
 <li><a href="about">About</a></li>
 
