--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -7,11 +7,11 @@
 
 <p>Email: josh at tristara.com
 
-<p>LinkedIn
-
-<p>Twitter
-
-<p>Quora
+<ul class="horizontal">
+<li><a href="http://www.linkedin.com/profile/view?id=5878758&trk=tab_pro">LinkedIn</a></li>
+<li><a href="http://twitter.com/#!/jseims">Twitter</a></li>
+<li><a href="http://www.quora.com/Joshua-Seims">Quora</a></li>
+</ul>
 
 </div>
                   
