--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -13,9 +13,15 @@
 <div id="intro">
 <p><span>Welcome to my site</span>
 <p>My name is Joshua Seims, and I live in San Francisco.
+<!--
 <p>I'm a serial entrepreneur, and an occasional angel investor. I particularly enjoy advising early stage startups.
 <p>I love hacking and building cool products.
 <p>Trivia: I was born in Hong Kong, I own a ridiculously  large hot tub, and I know the secret obscene Latin verse in "Ten Thousand Men of Harvard."
+-->
+<p>I'm a serial entrepreneur, and an occasional angel investor.
+<p>I love hacking and building cool products.  I don't so much like technology as I like the power of technology, the power to distill patterns from complexity and create enriching user experiences.
+<p>Looking for help on your project?  Then be in touch.  I particularly enjoy advising early stage startups.
+
 </div>
 
 <div style="clear:both;"></div>
@@ -32,7 +38,7 @@ Here's a small sampling of some things I've done:
 </ul>    
 </p>
 <p>
-<a href="page.html"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+<a href="projects"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
 </div>
 
 <div id="box_right">
@@ -52,7 +58,15 @@ What are some examples of being raised as a third-culture kid? What are the bene
 </div>
 
 <div id="box_middle">
-<h3>Work</h3>
+<h3>Services</h3>
+<p>Creating a startup is an exhilarating experience.  I know, I've done it, and I've made almost every mistake in the process.  
+
+<p>But I got enough things right to bootstrap a new business and grow it organically to over $20 million in annual revenue.
+
+<p>
+If you're passionate about an idea and willing to knock down any obstacle to make your vision a reality, then I will want you to succeed.  
+I can help with sweat, money, and experience.
+<!--
 I like getting involved with new projects, so feel free to be in touch if you need:
 
 <ul class="normal_list">
@@ -62,9 +76,9 @@ I like getting involved with new projects, so feel free to be in touch if you ne
 <li><b>A Consultant</b>.  More for fun than money.  Let me know if you have a particularly interesting product you'd like built.</li>
 </ul>
 </p>
-
+-->
 <p>
-<a href="page.html"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+<a href="services"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
 </div>
 {% endblock %}
 
