--- a/server/templates/work.html
+++ b/server/templates/work.html
@@ -5,15 +5,42 @@
 
 <h1>Work</h1> 
 
-I like getting involved with new projects, so feel free to be in touch if you need:
+<p>
+Creating a startup is an exhilarating experience.  I know, I've done it, and I've made almost every mistake in the process.  
+But I got enough things right to bootstrap a new business and grow it organically to over $20 million in annual revenue.
+
+<p>
+If you're passionate about an idea and willing to knock down any obstacle to make your vision a reality, then I will want you to succeed.  
+I can help with sweat, money, and experience.
+
+<p>To elaborate:</p>
+
+<b>Sweat</b>
 
 <ul class="normal_list">
-<li><b>A Technical Co-Founder</b>.  Founding a company can be very interesting and lucrative, but it's a super big deal, so we'd have to get to know each other really well.</li>
-<li><b>An Advisor</b>.  I've bootstapped a company, and grown it organically to over $20 million in annual revenue.  I've made almost every possible mistake along the way, and would be happy to save you the same headaches.</li>
-<li><b>An Investor</b>.  I make selective investments, based on how much value I can provide beyond money.</li>
-<li><b>A Consultant</b>.  More for fun than money.  Let me know if you have a particularly interesting product you'd like built.</li>
+<li>I can build your Minimally Viable Product.</li>
+<li>I'll iterate through the "Build / Measure / Learn" lean startup cycles until we achieve traction.</li>
+<li>I have a preference toward Python, but can work in any language.</li>
+<li>I'm a strong product guy, so I can handle requirements and usability issues.</li>
 </ul>
-</p>
+
+<p></p><b>Money</b>
+
+<ul class="normal_list">
+<li>I can provide seed capital.</li>
+<li>I prefer to make investments where I add value beyond money (i.e., build something, or leverage domain expertise).</li>
+</ul>
+
+<p></p><b>Experience</b>
+
+<ul class="normal_list">
+<li>Strategically, I can help you identify the single thing you need to focus on that will determine your success or failure.</li>
+<li>I can help with tons of operational issues, like accounting, finding office space, legal documents, etc.</li>
+<li>Have you thought much about the culture you want to create before you make your first hire?  You should, and I can tell you why.</li>
+</ul>
+
+
+<p></p>So if you're looking for help in any of these areas, please <a href="contact">be in touch</a>.  I'm always happy to meet for coffee, or just answer a random question.
                   
 </div><!-- end content -->
 
