--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -36,7 +36,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 <body>
 
 <div id="header">
-<div id="logo-img"><a href="/"><img src="images/logo.png"></a></div>
+<div id="logo-img"><a href="/"><img src="images/logo.png" width="220"></a></div>
 <div id="logo-text">Cool stuff &#8898; Joshua Seims</div>
 </div>
 
@@ -56,7 +56,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 
 <li><a href="about">About</a></li>
 
-<li><a href="blog">Blog</a></li>
+<li><a href="blog/">Blog</a></li>
 
 <li><a href="contact">Contact</a></li>
 
