--- a/web/css/style.css
+++ b/web/css/style.css
@@ -240,7 +240,7 @@ ul.horizontal li                      { float: left; zoom: 1; margin-right: 45px
 	LEVEL ONE
 */
 
-ul.dropdown                         { position: relative; z-index:10; margin: auto; border-top: 1px solid #dbdbdb;
+ul.dropdown                         { pz-index:10; margin: auto; border-top: 1px solid #dbdbdb;
 	                     border-bottom: 1px solid #dbdbdb; height:36px; background: #eaeaea; margin-bottom: 44px; 	clear: both;}
 									  
 ul.dropdown li                      { float: left; zoom: 1;  }
