stupid shifting css fix

--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}    
-<div id="content"><!-- content -->
+<div id="content" style="clear:both"><!-- content -->
 
 <h1>Contact</h1> 
 
@@ -13,8 +13,6 @@
 <li><a href="http://www.quora.com/Joshua-Seims">Quora</a></li>
 </ul>
 
-</div>
-                  
 </div><!-- end content -->
 
 {% include "sidebar.html" %}
