--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -61,7 +61,10 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 
 </ul><!-- close menu -->
 
+<div id="main_content">
       {% block content %}{% endblock %}
+</div>
+	  
 <div id="footer">
  &copy; Copyright 2011 Joshua Seims 
 </div>
