--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}    
-<div id="content" style="clear:both"><!-- content -->
+<div id="left_content" style="clear:both"><!-- content -->
 
 <h1>Contact</h1> 
 
