--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,7 +4,7 @@
 <div id="gallery"><!-- gallery -->
 
 <ul>
-  <li><a href="gallery.html"><img src="images/josh2.png" alt="demo" /></a></li>
+  <li><a href="gallery.html"><img src="images/josh2.png" alt="Joshua Seims" /></a></li>
 </ul>
 
 </div><!-- close gallery -->
