--- a/server/templates/work.html
+++ b/server/templates/work.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}    
-<div id="content"><!-- content -->
+<div id="left_content" style="clear:both"><!-- content -->
 
 <h1>Work</h1> 
 
