--- a/server/templates/about.html
+++ b/server/templates/about.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %} 
 
-{% block content %} <div id="content"><!-- content --> 
+{% block content %} 
+
+<div id="left_content" style="clear:both"><!-- content --> 
 
 <h1>About</h1> <p></p> On the biographical front: 
 
