--- a/wordpress/wp-content/themes/tristara/style.css
+++ b/wordpress/wp-content/themes/tristara/style.css
@@ -18,7 +18,10 @@ Template: twentyeleven
 body, input, textarea {
 	line-height: 1.0;
 }
-
+#main {
+	margin-top: 44px;
+	padding: 0 0 0;
+}
 #primary {
 	float: left;
 	margin: 0 0 0 0;
@@ -54,4 +57,8 @@ body, input, textarea {
 .entry-content blockquote {
     margin-top: 0px;
     margin-bottom: 0px;
+}
+
+.entry-title {
+	padding-top: 0px;
 }
