youtube flowmode, v1 reddit images

--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -11,6 +11,7 @@
 <li><a href="http://www.linkedin.com/profile/view?id=5878758&trk=tab_pro">LinkedIn</a></li>
 <li><a href="http://twitter.com/#!/jseims">Twitter</a></li>
 <li><a href="http://www.quora.com/Joshua-Seims">Quora</a></li>
+<li><a href="https://github.com/jseims">GitHub</a></li>
 </ul>
 
 </div><!-- end content -->
