--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -12,6 +12,21 @@ Here's a small sampling of some things I've done:
 <div id="project">
 
   <div id="project_img">
+    <a href="video_wall"><img src="images/flow_mode.png" style="border:1px solid #dcdcdc;"></a>
+  </div>
+  
+  <div id="project_text">
+    <p><span>Video Wall</span>
+    <p>I created a special video player that blasts a continuous stream of random moments of videos at you.
+    <p>For this demo, I loaded up the player with YouTube's top 1000 videos of all time.
+    <p><a href="video_wall"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
+  </div>
+
+</div>
+
+<div id="project">
+
+  <div id="project_img">
     <img src="images/almost_there.png">
   </div>
   
