--- a/server/templates/work.html
+++ b/server/templates/work.html
@@ -21,7 +21,7 @@ I can help with sweat, money, and experience.
 <li>I can build your Minimally Viable Product.</li>
 <li>I'll iterate through the "Build / Measure / Learn" lean startup cycles until we achieve traction.</li>
 <li>I have a preference toward Python, but can work in any language.</li>
-<li>I'm a strong product guy, so I can handle requirements and usability issues.</li>
+<li>I'm a strong product guy, so I can handle usability issues and work with underspecified requirements.</li>
 </ul>
 
 <p></p><b>Money</b>
