--- a/server/templates/sidebar.html
+++ b/server/templates/sidebar.html
@@ -17,7 +17,10 @@
 	<ul>
 	
     {% for post in posts %}
-		<li><a href="{{post.url}}">{{post.title}}</a></li>
+		<li><a href="{{post.guid}}">{{post.post_title}}</a></li>
 	{% endfor %}
+
+    </ul>
+    </div>
 
 </div><!-- end sidebar -->
