--- a/web/css/style.css
+++ b/web/css/style.css
@@ -74,6 +74,13 @@ body {width: 960px; margin: auto; font-family: Georgia, "Times New Roman", Times
 #left_content {
 	width: 620px;
 	float: left;
+	margin-bottom: 44px;    
+}
+
+#right_content {
+	width: 260px; 
+	float: right;
+	margin-bottom: 44px;    
 }
 
 #sidebar {
@@ -81,6 +88,7 @@ body {width: 960px; margin: auto; font-family: Georgia, "Times New Roman", Times
 	padding: 20px;
 	float: right;
 	border: 1px solid #dcdcdc;
+	margin-bottom: 44px;    
 }
 
 #sidebar h3, .sidebar_box {
