--- a/wordpress/wp-content/themes/tristara/style.css
+++ b/wordpress/wp-content/themes/tristara/style.css
@@ -43,7 +43,8 @@ body, input, textarea {
 
 .entry-content ul li {
     margin-left: 30px; 
-    margin-top: 10px;
+    margin-bottom: 10px;
+	line-height: 1.4em;    
 }
 
 .entry-content ul {
@@ -57,6 +58,8 @@ body, input, textarea {
 .entry-content blockquote {
     margin-top: 0px;
     margin-bottom: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .entry-title {
