done with reddit pics

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -36,7 +36,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 
 <div id="header">
 <div id="logo-img"><a href="/"><img src="images/logo.png" width="220"></a></div>
-<div id="logo-text">Cool stuff &#8898; Joshua Seims</div>
+<div id="logo-text">Musings and Tinkerings</div>
 </div>
 
 <ul class="dropdown"><!-- menu -->
@@ -68,6 +68,8 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 <div id="footer">
  &copy; Copyright 2011 Joshua Seims 
 </div>
+
+{% block js_body %}{% endblock %}
 
 </body>
 </html>
