--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -18,8 +18,8 @@
 <p>I love hacking and building cool products.
 <p>Trivia: I was born in Hong Kong, I own a ridiculously  large hot tub, and I know the secret obscene Latin verse in "Ten Thousand Men of Harvard."
 -->
-<p>I'm a serial entrepreneur, and an occasional angel investor.
-<p>I love hacking and building cool products.  I don't so much like technology as I like the power of technology, the power to distill patterns from complexity and create enriching user experiences.
+<p>I'm a hacker, entrepreneur, and an occasional angel investor.
+<p>I love building products that tease interesting patterns out of the world.  I love creating novel user experiences.
 <p>Looking for help on your project?  Then be in touch.  I particularly enjoy advising early stage startups.
 
 </div>
