--- a/server/templates/work.html
+++ b/server/templates/work.html
@@ -7,7 +7,7 @@
 
 <p>
 Creating a startup is an exhilarating experience.  I know, I've done it, and I've made almost every mistake in the process.  
-But I got enough things right to bootstrap a new business and grow it organically to over $20 million in annual revenue.
+But I got enough things right to bootstrap a new business (HitPlay) and grow it organically to over $20 million in annual revenue.
 
 <p>
 If you're passionate about an idea and willing to knock down any obstacle to make your vision a reality, then I will want you to succeed.  
@@ -40,7 +40,7 @@ I can help with sweat, money, and experience.
 </ul>
 
 
-<p></p>So if you're looking for help in any of these areas, please <a href="contact">be in touch</a>.  I'm always happy to meet for coffee, or just answer a random question.
+<p></p>So if you're looking for help in any of these areas, please <a href="contact">be in touch</a>.
                   
 </div><!-- end content -->
 
